--- a/Utmach/templates/materialize/page-login.html
+++ b/Utmach/templates/materialize/page-login.html
@@ -28,7 +28,6 @@
 
 
   <!-- CORE CSS-->
-  
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection">
   <link href="css/page-center.css" type="text/css" rel="stylesheet" media="screen,projection">
@@ -39,7 +38,7 @@
   
 </head>
 
-<body class="cyan">
+<body class="white">
   <!-- Start Page Loading -->
   <div id="loader-wrapper">
       <div id="loader"></div>        
